<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">gym_app</string>
    <string name="main_welcome_content_description">welcome</string>
    <string name="All_idText">ID:%1$d</string>
    <string name="All_welcome">%1$s %2$s！</string>
    <string name="Class_titleText">課程資訊</string>
    <string name="Class_timeTitleText">課程時段</string>
    <string name="Class_feeTitleText">課程費用</string>
    <string name="Class_imageDescription">課程圖片</string>
    <string name="Class_loveImageDescription">收藏圖片</string>
    <string name="Class_addTitleText">新增課程</string>
    <string name="Class_feeText">費用: $%1$d</string>
    <string name="Class_numberText">人數: %1$d人</string>
    <string name="Class_timeText">時長: %1$d分鐘</string>
    <string name="Home_imageDescription">ShowImage</string>
    <string name="Home_userButton1">【課程】</string>
    <string name="Home_userButton2">【教練】</string>
    <string name="Home_userButton3">【收藏】</string>
    <string name="Home_userButton4">【預約】</string>
    <string name="Home_userButton5">【附近】</string>
    <string name="Home_coachButton1">【安排課程】</string>
    <string name="Home_coachButton2">【課表管理】</string>
    <string name="Home_coachButton3">【預約管理】</string>
    <string name="Home_coachButton4">【預約紀錄】</string>
    <string name="Home_coachButton5">【我的成果】</string>
    <string name="Home_editButton">編輯資料</string>
    <string name="Info_idUserHint">用戶ID</string>
    <string name="Info_idCoachHint">用戶ID</string>
    <string name="Info_accountHint">帳號</string>
    <string name="Info_nameHint">姓名</string>
    <string name="Info_phoneHint">手機號碼</string>
    <string name="Info_emailHint">電子郵件</string>
    <string name="Info_sexUserHint">性別</string>
    <string name="Info_sex1Text">男性</string>
    <string name="Info_sex2Text">女性</string>
    <string name="Info_sex3Text">不願透露</string>
    <string name="Info_uploadDescription">上傳圖片</string>
    <string name="Info_resetDescription">重設密碼</string>
    <string name="Info_deleteDescription">刪除帳號</string>
    <string name="Info_sexCoachHint">性別</string>
    <string name="ScheduledSet_timeHint">%1$d分鐘</string>
    <string name="ScheduledSet_limitHint">%1$d人</string>
    <string name="ScheduledSet_feeHint">$%1$d</string>
    <string name="ScheduledSet_timeText">%02d:%02d</string>
    <string name="CoachClass_costText">$%1$d</string>
    <string name="CoachClass_numberText">%1$d人</string>
    <string name="title_home">首頁</string>
    <string name="title_dashboard">教練</string>
    <string name="title_notifications">用戶</string>
    <string name="title_Info">個人資料</string>
    <string name="goBack">返回</string>
    <string name="logOut">登出</string>
    <string name="MapView_searchHint">輸入課程名稱</string>
    <string name="MapView_searchButton">查詢</string>
    <string name="AIInteractive_titleText">【常見問題】</string>
    <string name="AIInteractive_inputHint">請輸入你想問的操作流程</string>
    <string name="AIInteractive_submitText">提問</string>
    <string name="Contact_titleText">【聯絡我們】</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1IjoiZzEwMTQzMDgiLCJhIjoiY20zNDVscWJtMW1rMzJqczczY25sbjd3ciJ9.9A-0xBz7PEseqVeIBG5z6g</string>
    <string name="mapbox_style_url">mapbox://styles/g1014308/cm36yrww7013g01pw50192vmm</string>

</resources>