<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/InfoSex_sexGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/InfoSex_sexRadio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Info_sex1Text" />

    <RadioButton
        android:id="@+id/InfoSex_sexRadio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Info_sex2Text" />

    <RadioButton
        android:id="@+id/InfoSex_sexRadio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Info_sex3Text" />

</RadioGroup>
