<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.NPTUMisStone.gym_app.User.Search.Calendar.CalendarFragment"
        android:label="@string/title_home"
        tools:layout="@layout/user_search_fragment_calendar" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.NPTUMisStone.gym_app.User.Search.Coach.CoachFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/user_search_fragment_coach" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.NPTUMisStone.gym_app.User.Search.Class.ClassFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/user_search_fragment_class" />
</navigation>